tests/ui/const-generics/gca/suggest-const-item-for-generic-expr.stderr
error: generic parameters may not be used in const operations
  --> $DIR/suggest-const-item-for-generic-expr.rs:10:43
   |
LL |     fn as_bytes(&self) -> &[u8; size_of::<Self>()] {
   |                                           ^^^^ cannot perform const operation using `Self`
   |
   = note: type parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions
   = help: alternatively, you can use `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: generic parameters may not be used in const operations
  --> $DIR/suggest-const-item-for-generic-expr.rs:16:31
   |
LL | fn foo<T>() -> [u8; size_of::<T>()] {
   |                               ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions
   = help: alternatively, you can use `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: generic parameters may not be used in const operations
  --> $DIR/suggest-const-item-for-generic-expr.rs:21:34
   |
LL | fn bar<const N: usize>() -> [u8; N + 1] {
   |                                  ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions
   = help: alternatively, you can use `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: aborting due to 3 previous errors

